[package]
name = "rcronic"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.70"

log = "0.4.20"
fern = "0.6.2"
humantime = "2.1.0"
duct = "0.13.6"
